--- a/2013/1km paper/differential_cross_section.tex
+++ b/2013/1km paper/differential_cross_section.tex
@@ -114,7 +114,7 @@ Statistical fluctuations in $\theta_y^*$ are mostly due to the beam divergence a
 %
 By dividing their standard deviation by a factor of 2, one can estimate the resolution of the two-arm reconstruction (Eq.~(\ref{eq:kin 2a})) of elastic events, see Figure~\ref{fig:resol final}, right.
 %
-Moreover, measurements of beam emittances \cite{op-elog} indicate that the vertical divergences of the two beams can be considered as equal with a tolerance of about $25\un{\%}$. Exploiting this fact, one can de-convolute the distribution of $\theta_y^{*\rm R} - \theta_y^{*\rm L}$ in order to obtain the beam-divergence distribution, used e.g.~for acceptance corrections discussed in Section~\ref{sec:acc corr}.
+Moreover, measurements of beam emittances \cite{op-elog} indicate that the vertical divergences of the two beams can be considered as equal with a tolerance of about $25\un{\%}$. Exploiting this fact, one can de-convolute the distribution of $\theta_y^{*\rm R} - \theta_y^{*\rm L}$ in order to obtain the beam-divergence distribution, used for the acceptance corrections discussed in Section~\ref{sec:acc corr}.
 
 \begin{figure}
 \begin{center}
@@ -126,12 +126,12 @@ Difference between vertical scattering angles reconstructed in the right and lef
 \end{center}
 \end{figure}
 
-In the horizontal projection, a more complex procedure is used since the one-arm reconstruction, Eq.~(\ref{eq:kin 1a}), is strongly influenced by sensor resolution. First, the horizontal beam divergence is estimated from the standard deviation of reconstructed vertices, $\sigma(x^*)$:
+In the horizontal projection, a more complex procedure is used since the one-arm reconstruction, Eq.~(\ref{eq:kin 1a}), is strongly influenced by the detector resolution. First, the horizontal beam divergence is estimated from the standard deviation of reconstructed vertices, $\sigma(x^*)$:
 \begin{equation}
 \label{eq:beam div from vertex}
-\sigma^{\rm bd}(\theta_x^*) = {\sigma(x^*) \sqrt 2\over \beta^*}\ ,
+\sigma^{\rm bd}(\theta_x^*) = {\sigma(x^*) \sqrt 2\over \beta^*}\ .
 \end{equation}
-showing an increase from $0.75$ to $0.9\un{\mu rad}$ during the fill. Subtracting this component from the standard deviation of $\theta_x^{*\rm R} - \theta_x^{*\rm L}$, one can determine the (mean) spatial resolution of the sensors in each diagonal: $10.7\un{\mu m}$ (45 top -- 56 bottom) and $12.1\un{\mu m}$ (45 bottom -- 56 top). These results have been verified to be time independent. Finally, the beam divergence and sensor resolution components can be propagated through Eq.~({\ref{eq:kin 2a}}) to estimate the $\theta_x^*$ resolution for elastic events, as plotted in Figure~\ref{fig:resol final}, left.
+It increases from $0.75$ to $0.9\un{\mu rad}$ over the time of the fill. Subtracting this component from the standard deviation of $\theta_x^{*\rm R} - \theta_x^{*\rm L}$, one determines the (mean) spatial resolution of the sensors in each diagonal: $10.7\un{\mu m}$ (45 top -- 56 bottom) and $12.1\un{\mu m}$ (45 bottom -- 56 top). These results have been verified to be time independent. Finally, the beam divergence and sensor resolution components can be propagated through Eq.~({\ref{eq:kin 2a}}) to estimate the $\theta_x^*$ resolution for elastic events, as plotted in Figure~\ref{fig:resol final}, left.
 
 
 \begin{figure}
