Marco's comments for sections 5.2.4 and further
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11509 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -16,7 +16,7 @@ The $\rho$ parameter was for the first time at LHC extracted via the Coulomb-nuc
 \rho = 0.12 \pm 0.03\ .
 \end{equation}
 
-The new total cross-section determination is conceptually more accurate than in all previous LHC publications since the CNI effects are explicitly treated. Moreover, the value of $\rho$ comes from the same analysis, not from an external source, which underlines consistency. The $\sigma_{\rm tot}$ values are very well consistent among all non-excluded fits and compatible with the previous measurements. As expected, the new determination yields slightly greater values relative to previous results where the negative CNI was not taken into account.
+The new total cross-section determination is conceptually more accurate than in all previous LHC publications since the CNI effects are explicitly treated. Moreover, the value of $\rho$ comes from the same analysis, not from an external source, which underlines consistency. The $\sigma_{\rm tot}$ values are very well consistent among all non-excluded fits and compatible with the previous measurements. As expected, the new determination yields slightly greater values relative to previous results where the negative CNI was not taken into account. Also note that if the SWY formula with purely exponential hadronic modulus are used, the total cross-section is underestimated by about $1\un{mb}$.
 
 It may be seen from the results in Section \ref{sec:coulomb} that the physical interpretation of elastic collisions depends on various additional assumptions on corresponding mathematical models. It concerns both nuclear and Coulomb fit components. We would like to draw the reader's attention to at least one issue. The standard QED expression for the Coulomb cross-section, Eq.~(\ref{eq:coul cs}), tends to infinity for $t\to 0$ which can be seen as a consequence of large impact parameter values assumed in the initial state. However, in any experiment only small impact parameter values -- e.g. given by the beam dimensions -- are responsible for the measured data. Greater theoretical attention should be devoted to the precise description of the experimental initial states and to the modelling of the fundamental interactions.
 
